# smt4pddl

./: CMakeLists.txt  main.cpp
